--- a/components/browser/errorpages/src/main/res/values-sk/strings.xml
+++ b/components/browser/errorpages/src/main/res/values-sk/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools" xmlns:moz="http://mozac.org/tools">
 
     <!-- The button that appears at the bottom of an error page. -->
     <string name="mozac_browser_errorpages_page_refresh">Skúsiť znova</string>
@@ -43,6 +43,32 @@
     <string name="mozac_browser_errorpages_security_bad_cert_back">Prejsť naspäť (odporúča sa)</string>
     <!-- The text shown inside the advanced options button used to bypass the invalid SSL certificate. It's only shown if the user has expanded the advanced options. -->
     <string name="mozac_browser_errorpages_security_bad_cert_accept_temporary">Rozumiem riziku a chcem pokračovať</string>
+
+    <!-- The document title and heading of the error page shown when a website uses HSTS. -->
+    <string name="mozac_browser_errorpages_security_bad_hsts_cert_title">Táto webová stránka vyžaduje zabezpečené pripojenie.</string>
+
+    <!-- The error message shown when a website uses HSTS. -->
+    <string name="mozac_browser_errorpages_security_bad_hsts_cert_message"><![CDATA[
+      <ul>
+         <li>Stránka, ktorú sa pokúšate zobraziť, sa nedá zobraziť, pretože táto webová lokalita vyžaduje zabezpečené pripojenie.</li>
+         <li>Problém je s najväčšou pravdepodobnosťou na webových stránkach a nemôžete ho nijako vyriešiť.</li>
+         <li>O probléme môžete informovať správcu webových stránok.</li>
+      </ul>
+    ]]></string>
+
+    <!-- The text shown inside the advanced button used to expand the advanced options. It's only shown when a website uses HSTS. -->
+    <string name="mozac_browser_errorpages_security_bad_hsts_cert_advanced">Pokročilé…</string>
+
+    <!-- The advanced certificate information shown when a website uses HSTS. The %1$s will be replaced by the website URL and %2$s will be replaced by the app name. It's only shown when a website uses HSTS. -->
+    <string moz:removedIn="104" name="mozac_browser_errorpages_security_bad_hsts_cert_techInfo" tools:ignore="UnusedResources"><![CDATA[
+        <label> <b>%1$s</b> má bezpečnostnú politiku s názvom HTTP Strict Transport Security (HSTS), čo znamená, že <b>%2$s</b> sa k nemu môže pripojiť iba zabezpečene. Na návštevu tohto webu nemôžete pridať výnimku.
+    ]]></string>
+    <!-- The advanced certificate information shown when a website uses HSTS. The %1$s will be replaced by the website URL and %2$s will be replaced by the app name. It's only shown when a website uses HSTS. -->
+    <string name="mozac_browser_errorpages_security_bad_hsts_cert_techInfo2"><![CDATA[
+        <label> <b>%1$s</b> má bezpečnostnú politiku s názvom HTTP Strict Transport Security (HSTS), čo znamená, že <b>%2$s</b> sa k nemu môže pripojiť iba zabezpečene. Na návštevu tohto webu nemôžete pridať výnimku.</label>
+    ]]></string>
+    <!-- The text shown inside the advanced options button used to go back. It's only shown if the user has expanded the advanced options. -->
+    <string name="mozac_browser_errorpages_security_bad_hsts_cert_back">Prejsť naspäť</string>
 
     <!-- The document title and heading of the error page shown when the user's network connection is interrupted while connecting to a website. -->
     <string name="mozac_browser_errorpages_net_interrupt_title">Pripojenie bolo prerušené</string>
@@ -291,4 +317,11 @@
     <string name="mozac_browser_errorpages_safe_phishing_uri_message"><![CDATA[
       <p>Stránka %1$s bola označená ako podvodná a na základe nastavení zabezpečenia bola zablokovaná.</p>
     ]]></string>
+
+    <!-- The title of the error page for websites that do not support HTTPS when HTTPS-Only is turned on -->
+    <string name="mozac_browser_errorpages_httpsonly_title">Zabezpečená verzia stránky nie je k dispozícii</string>
+    <!-- The text of the error page for websites that do not support HTTPS when HTTPS-Only is turned on. %1$s will be replaced with the URL of the website. -->
+    <string name="mozac_browser_errorpages_httpsonly_message"><![CDATA[Webové stránky prehliadate v režime "Len HTTPS", ale zabezpečená verzia stránky <em>%1$s</em> nie je k dispozícii.]]></string>
+    <!-- Button on error page for websites that do not support HTTPS when HTTPS-Only is turned on. Clicking the button allows the user to nevertheless load the website using HTTP. -->
+    <string name="mozac_browser_errorpages_httpsonly_button">Pokračovať na nezabezpečenú stránku</string>
 </resources>
