--- a/components/browser/errorpages/src/main/res/values-su/strings.xml
+++ b/components/browser/errorpages/src/main/res/values-su/strings.xml
@@ -43,6 +43,26 @@
     <!-- The text shown inside the advanced options button used to bypass the invalid SSL certificate. It's only shown if the user has expanded the advanced options. -->
     <string name="mozac_browser_errorpages_security_bad_cert_accept_temporary">Tampa Risiko jeung Teruskeun</string>
 
+    <!-- The document title and heading of the error page shown when a website uses HSTS. -->
+    <string name="mozac_browser_errorpages_security_bad_hsts_cert_title">Ieu raramatloka butuh sambungan anu aman.</string>
+    <!-- The error message shown when a website uses HSTS. -->
+    <string name="mozac_browser_errorpages_security_bad_hsts_cert_message"><![CDATA[
+      <ul>
+         <li>Kaca anu rék dibuka teu bisa ditémbongkeun kusabab ieu raramatloka butuh sambungan anu aman.</li>
+         <li>Masalahna sigana di raramatlokana, jadi anjeun teu bisa kumaha.</li>
+         <li>Anjeun bisa ngiberan kuncén raramatlokana ngeunaan ieu masalah.</li>
+      </ul>
+    ]]></string>
+
+    <!-- The text shown inside the advanced button used to expand the advanced options. It's only shown when a website uses HSTS. -->
+    <string name="mozac_browser_errorpages_security_bad_hsts_cert_advanced">Leuwih lengkep…</string>
+    <!-- The advanced certificate information shown when a website uses HSTS. The %1$s will be replaced by the website URL and %2$s will be replaced by the app name. It's only shown when a website uses HSTS. -->
+    <string name="mozac_browser_errorpages_security_bad_hsts_cert_techInfo"><![CDATA[
+        <label> <b>%1$s</b> miboga kawijakan kaamanan anu katelah HTTP Strict Transport Security (HSTS), anu hartina <b>%2$s</b> ngan bisa nyambung ka dinya ku cara anu aman. Anjeun teu bisa ngiwalkeun pikeun muka ieu loka.
+    ]]></string>
+    <!-- The text shown inside the advanced options button used to go back. It's only shown if the user has expanded the advanced options. -->
+    <string name="mozac_browser_errorpages_security_bad_hsts_cert_back">Balik Deui</string>
+
     <!-- The document title and heading of the error page shown when the user's network connection is interrupted while connecting to a website. -->
     <string name="mozac_browser_errorpages_net_interrupt_title">Sambunganana kapegat</string>
 
@@ -206,7 +226,7 @@
     <string name="mozac_browser_errorpages_file_access_denied_title">Aksés ka berkas ditolak</string>
 
     <string name="mozac_browser_errorpages_file_access_denied_message"><![CDATA[<ul>
-        <li>Bisa jadi kulantaran geus dipupus, dipindahhkeun, atawa ayana idin berkas anu matak nyaram aksés.</li>
+        <li>Bisa jadi kulantaran geus dipupus, dipindahkeun, atawa ayana idin berkas anu matak nyaram aksés.</li>
       </ul>]]></string>
 
     <!-- The document title and heading of an error page. -->
@@ -248,4 +268,11 @@
     <string name="mozac_browser_errorpages_safe_phishing_uri_title">Masalah loka nu nipu</string>
     <!-- The %1$s will be replaced by the malicious website URL-->
     <string name="mozac_browser_errorpages_safe_phishing_uri_message"><![CDATA[<p>Kaca web ieu di %1$s dilaporkeun salaku loka nu nipu jeung tos diblokir dumasar kana pilihan kahoyong kaamanan.</p>]]></string>
+
+    <!-- The title of the error page for websites that do not support HTTPS when HTTPS-Only is turned on -->
+    <string name="mozac_browser_errorpages_httpsonly_title">Situs Aman Teu Sayaga</string>
+    <!-- The text of the error page for websites that do not support HTTPS when HTTPS-Only is turned on. %1$s will be replaced with the URL of the website. -->
+    <string name="mozac_browser_errorpages_httpsonly_message"><![CDATA[Anjeun ngahurungkeun Mode Ukur-HTTPS pikeun kaamanan lanjutan, anapon pérsi HTTPS <em>%1$s</em> teu sayaga.]]></string>
+    <!-- Button on error page for websites that do not support HTTPS when HTTPS-Only is turned on. Clicking the button allows the user to nevertheless load the website using HTTP. -->
+    <string name="mozac_browser_errorpages_httpsonly_button">Teruskeun ka Situs HTTP</string>
 </resources>
