--- a/components/lib/crash/src/main/res/values-tr/strings.xml
+++ b/components/lib/crash/src/main/res/values-tr/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <!-- Title of the crash reporter dialog. %1$s will be replaced with the name of the app (e.g. Firefox Focus). -->
-    <string name="mozac_lib_crash_dialog_title">Kusura bakmayın, %1$s bir sorunla karşılaştı ve çöktü.</string>
+    <string name="mozac_lib_crash_dialog_title">%1$s bir sorunla karşılaştı ve çöktü.</string>
 
     <!-- Label of the checkbox for sending crash reports in the crash reporter dialog. %1$s will be replaced with the name of the organization (e.g. Mozilla). -->
     <string name="mozac_lib_crash_dialog_checkbox">Çökme raporunu %1$s’ya gönder</string>
@@ -16,8 +16,11 @@
     <!-- Name of the "notification channel" used for displaying a notification when the app crashed and we can't show a prompt. See https://developer.android.com/training/notify-user/channels -->
     <string name="mozac_lib_crash_channel">Çökmeler</string>
 
+    <!-- Title of the crash reporter notification for background process crashes. %1$s will be replaced with the name of the app (e.g. Firefox Focus). -->
+    <string name="mozac_lib_crash_background_process_notification_title">%1$s uygulamasında bir sorun oluştu.</string>
+
     <!-- Label of a notification action/button that will send the crash report to Mozilla. -->
-    <string name="mozac_lib_crash_notification_action_report">Bildir</string>
+    <string name="mozac_lib_crash_notification_action_report">Raporla</string>
 
     <!-- Label of notification showing that the crash report service is running. %1$s will be replaced with the name of the organization (e.g. Mozilla). -->
     <string name="mozac_lib_send_crash_report_in_progress">Çökme raporu %1$s\'ya gönderiliyor</string>
